# Sveio

./: .dockerignore  .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  capitals.csv  cities.json  docker-compose.yml  rustfmt.toml
.github/workflows/: docker-image.yml  shuttle.yml  tests.yml
frontend/: 404.html  game.css  game.html  game.js  index.html  landing.html  robots.txt  script.js  style.css  ui.css
frontend/.well-known/: security.txt
frontend/icons/: site.webmanifest
src/: cli.rs  datasource.rs  game.rs  main.rs  packets.rs  server.rs  state.rs  utils.rs
