[package]
name = "sveio"
version = "1.0.0"
edition = "2021"
authors = ["Erb3"]
description = "A multiplayer geography game inspired by Posio"

[dependencies]
socketioxide = {version = "0.14.0", features=["extensions", "state"]}
tokio = {version = "1.38.0", features=["full"]}
tower-http = {version = "0.5.2", features=["cors", "fs", "timeout"]}
serde = {version = "1.0", features=["derive"]}
rand = {version = "0.8.5", features=["std_rng"]}
axum = "0.7.5"
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower = "0.4.13"
geoutils = "0.5.1"
regex = "1.10.5"
chrono = "0.4.38"
memory-serve = "0.6.0"
clap = { version = "4.5.8", features = ["derive", "env"] }
shuttle-runtime = {version = "0.47.0", optional = true}
shuttle-axum = {version = "0.47.0", optional = true}

[features]
shuttle = ["dep:shuttle-axum", "dep:shuttle-runtime"]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
