[package]
name = "sveio"
version = "1.1.0"
edition = "2021"
authors = ["Erb3"]
description = "A multiplayer geography game inspired by Posio"

[dependencies]
socketioxide = {version = "0.15.1", features=["extensions", "state"]}
tokio = {version = "1.41.0", features=["full"]}
tower-http = {version = "0.6.1", features=["cors", "fs", "timeout"]}
serde = {version = "1.0.214", features=["derive"]}
rand = {version = "0.8.5", features=["std_rng"]}
axum = "0.7.7"
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower = "0.5.1"
geoutils = "0.5.1"
regex = "1.11.1"
chrono = "0.4.38"
memory-serve = "0.6.0"
clap = { version = "4.5.20", features = ["derive", "env"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
